# net-descriptor-passing

./: CMakeLists.txt  README.md  main-client.cpp  main-server.cpp
service/: client.cpp  client.hpp  server.cpp  server.hpp  service-exception.hpp  socket.cpp  socket.hpp  utils.hpp
